--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_task">Add Task...</string>
     <string name="high_priority_task">High Priority Task</string>
+    <string name="search">Search</string>
+    <string name="sort">Sort</string>
+    <string name="sort_by_name">Sort by name</string>
+    <string name="sort_by_date_created">Sort by date created</string>
+    <string name="hide_completed_tasks">Hide Completed Tasks</string>
+    <string name="delete_completed_tasks">Delete Completed Tasks</string>
 </resources>
